fix: Correct grid-row-gap in project display

--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -14,7 +14,8 @@
     #projects-display{
         display:grid;
         grid-template-columns: 31% 31% 31%;
-        justify-content: space-evenly;
+        grid-row-gap: $spacing-unit;
+        justify-content: center;
         & a:hover{
             text-decoration: none;
         }
